--- a/ProjAPICarro/ProjAPICarro.csproj
+++ b/ProjAPICarro/ProjAPICarro.csproj
@@ -30,4 +30,8 @@
       <_ContentIncludedByDefault Remove="Views\Shared\_ValidationScriptsPartial.cshtml" />
     </ItemGroup>
 
+    <ItemGroup>
+      <Folder Include="Migrations\" />
+    </ItemGroup>
+
 </Project>
