--- a/ProjAPICarro/appsettings.json
+++ b/ProjAPICarro/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "ProjAPICarroContext": "Data Source= 127.0.0.1;Initial Catalog=DB_Garage_Two;User Id=sa;Password=SqlServer2019!;TrustServerCertificate=True"
+    "ProjAPICarroContext": "Data Source= 127.0.0.1;Initial Catalog=DB_Garage_Six;User Id=sa;Password=SqlServer2019!;TrustServerCertificate=True"
   }
 }
